# AutomataSpeedrunMod

./: .clang-format  .gitignore  AutomataMod.cpp  AutomataMod.hpp  AutomataMod.ixx  AutomataMod.sln  AutomataMod.vcxproj  AutomataMod.vcxproj.filters  CMakeLists.txt  ChipManager.cpp  ChipManager.hpp  ChipManager.ixx  DLLHook.cpp  DLLHook.hpp  DLLHook.ixx  DLLMain.cpp  DebugMenu.cpp  DebugMenu.hpp  DllMain.cpp  DxWrappers.cpp  DxWrappers.hpp  FactoryWrapper.cpp  FactoryWrapper.hpp  FactoryWrapper.ixx  HashCheck.cpp  HashCheck.hpp  HashCheck.ixx  IAT.cpp  IAT.ixx  ImguiHandler.cpp  ImguiHandler.hpp  InventoryManager.cpp  InventoryManager.hpp  InventoryManager.ixx  Log.cpp  Log.hpp  Log.ixx  ModConfig.cpp  ModConfig.hpp  ModConfig.ixx  (+18 more)
src/: AutomataMod.cpp  AutomataMod.hpp  ChipManager.cpp  ChipManager.hpp  DLLHook.cpp  DLLMain.cpp  FactoryWrapper.cpp  InventoryManager.cpp  InventoryManager.hpp  Log.hpp
src/com/: FactoryWrapper.cpp  FactoryWrapper.hpp  RefCounter.cpp  RefCounter.hpp  SwapChainWrapper.cpp  SwapChainWrapper.hpp  WrapperPointer.hpp
src/infra/: DLLHook.cpp  DLLHook.hpp  HashCheck.cpp  HashCheck.hpp  IAT.cpp  IAT.hpp  Log.cpp  Log.hpp  ModConfig.cpp  ModConfig.hpp  PointerIterator.hpp  Util.cpp  Util.hpp  constants.cpp  constants.hpp  defs.hpp
